# Ros2_2

./: README.md  package.xml  setup.py
.github/workflows/: test.yml
launch/: talk_listen.launch.py  weather_publisher_and_analyzer.launch.py
mypkg/: talker.py  weather_analyzer.py  weather_publisher.py
test/: test.bash
