<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mypkg</name>
  <version>0.0.0</version>
  <description>ロボットシステム学のサンプル</description>
  <maintainer email="s23C1147PD@s.chibakoudai.jp">Ryuhei Yoshida</maintainer>
  <license>BSD-3-Clause</license>

  <!-- 実行時の依存関係 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>person_msgs</exec_depend> <!-- person_msgs を追加 -->

  <!-- launch ファイルの依存関係 -->
  <exec_depend>launch_ros</exec_depend>

  <!-- テストの依存関係 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

